<resources>
    <string name="app_name">Arkansas Game and Fish</string>
    <string name="bluegill">\"The bluegill is noted for the black spot that it has on the posterior edge of the gills and base of the dorsal fin. The sides of its head and chin are a dark shade of blue. It usually contains 5–9 vertical bars on the sides of its body, but these stripes are not always distinct. It has a yellowish breast and abdomen, with the breast of the breeding male being a bright orange. The bluegill has three anal spines, ten to 12 anal fin rays, six to 13 dorsal fin spines, 11 to 12 dorsal rays, and 12 to 13 pectoral rays. They are characterized by their deep, flattened bodies. They have a terminal mouth, ctenoid scales, and a lateral line that is arched upward anteriorly. The bluegill typically ranges in size from about four to 12 inches, and reaches a maximum size just over 16 inches. The largest bluegill ever caught was four pounds, 12 ounces in 1950. Bluegills are popular panfish, caught with live bait such as worms or crickets, grasshoppers, flies, pieces of corn, small crankbaits, spinners, American cheese pushed around a hook, maggots, small frogs, bread, hotdogs, or even a bare hook. They mostly bite on vibrant colors like orange, yellow, green, or red, chiefly at dawn and dusk. They are noted for seeking out underwater vegetation for cover; their natural diet consists largely of small invertebrates and very small fish. The bluegill itself is also occasionally used as bait for larger game fish species, such as blue catfish, flathead catfish and largemouth bass.
Fishermen are sometimes able to use polarized sunglasses to see through water and find bluegills\' spawning beds. Bluegill have a rather bold character; many have no fear of humans, eating food dropped into the water, and a population in Canada\'s Lake Scugog will even allow themselves to be stroked by human observers. Because of their size and the method of cooking them, bluegills are often called panfish.
Although the majority of bluegills are caught on live bait—particularly worms, leeches, grubs and crickets—they can also be taken on tiny artificials such as jigs and spinnerbaits. They will rise to small poppers, sponge bugs and dry flies. They will also take wet flies, nymphs, and small streamers.\"</string>
    <string name="greensunfish">\"The green sunfish is blue green in color on its back and sides with yellow flecked bonyridged (ctenoid) scales, as well as yellow coloration on the ventral sides. They also have a dark spot located near the back end of the dorsal fin, the bases of the anal fins. and on the ear plate. It has a relatively big mouth and long snout that extends to beneath the middle of the eye. Its pectoral fins are short with rounded edges containing 1314 pectoral fin rays, a dorsal fin with about 10 dorsal spines and a homocercal tail. The typical length ranges from about 37 in and usually weighs less than a pound. The green sunfish reaches a maximum recorded length of about 30 cm (12 in), with a maximum recorded weight of 960 g (2.2 lb). Identification of sunfish species from one another can sometimes be difficult as these species frequently hybridize.\"</string>
    <string name="longearsunfish">\"The longear sunfish (Lepomis megalotis) is a freshwater fish in the sunfish family, Centrarchidae, of order Perciformes. It is native to the area of eastern North America stretching from the Great Lakes down to northeastern Mexico. The longear sunfish reaches a maximum recorded length of about 24 cm (9.5 in), with a maximum recorded weight of 790g (1.7 lb). Most do not live beyond six years. The longear sunfish is quite colorful, with an olive to rusty–brown back, bright orange belly and blue–green bars on the sides of its head. A unique characteristic is their elongated opercular flap, giving an appearance of a "long ear".
The species prefers densely vegetated, shallow waters in lakes, ponds, and sluggish streams. Its diet can include insects, aquatic invertebrates, and small fish. Avoiding strong currents, longear sunfish are usually present in small to moderate flowing streams, rivers, and reservoirs. The genus Lepomis has a well–characterized mating behavior where parental care is done by the male. He makes and defends the nest. Males fan the eggs to remove silt and other debris until the larvae hatch. Some longear females produce 4,000 eggs. They spawn in groups but do not form large colonies.
Longear sunfish are better at getting food in moving waters than still waters. This may explain why they are more abundant in streams than lakes. For the most part, longear sunfish are active during the day and inactive at night. There are very few conservation acts currently being performed in order to maintain the distribution and abundance of this species.\"</string>
    <string name="redear">\"The redear sunfish generally resembles the bluegill except for coloration and somewhat larger size. The redear sunfish also has faint vertical bars traveling downwards from its dorsal. It is dark–colored dorsally and yellow–green ventrally. The male has a cherry–red edge on its operculum; females have orange coloration in this area. The adult fish are between 20 and 24 cm (7.9 and 9.4 in) in length. Max length is 43.2 cm (17.0 in), compared to a maximum of about 40 cm (16 in) for the bluegill. Lepomis microlophus averages at a size of about 0.45 kg (0.99 lb), also larger than the average bluegill. Redear sunfish are native to North Carolina and Florida, west to south Illinois and south Missouri, and south to the Rio Grande drainage in Texas. However, this fish has also been widely introduced to other locations in the United States outside of its native range. In the wild, the redear sunfish inhabits warm, quiet waters of lakes, ponds, streams, and reservoirs. They prefer to be near logs and vegetation, and tend to congregate in groups around these features. This sunfish is also located in many marsh wetlands of freshwater.\"</string>
    <string name="warmouth">\"The adult warmouth is dark, with a mottled brown coloration. Its belly is generally golden, and the male has a bright–orange spot at the base of the dorsal fin. Three to five reddish–brown streaks radiate from the eyes, and the gill flaps are often red. It has three spines in the anal fin, 10 spines in the dorsal fin, and small teeth are present on the tongue. These fish range in size from 4 to 10 inches (10.2 to 25 cm), but can grow to over 12 inches (31 cm) in length, and weigh up to 2.25 pounds (1 kg). The warmouth is occasionally confused with the rock bass or green sunfish, both of which share its relatively large mouth and heavy body. However, the green sunfish generally has a greenish–blue variegated pattern on its gill flaps, a black spot near the base of the dorsal fin, and its fins are bordered in yellowish–white. The rock bass has 5–7 spines in its anal fin as opposed to the three in the warmouth. The warmouth tends to be a bit larger in size than either of the other two species.\"</string>
    <string name="bluecat">\"The blue catfish (Ictalurus furcatus) is the largest species of North American catfish, reaching a length of 165 cm (65 in) and a weight of 68 kg (150 lb). The average length is about 25–46 in (64–117 cm). The fish can live to 20 years. The native distribution of blue catfish is primarily in the Mississippi River drainage, including the Missouri, Ohio, Tennessee, and Arkansas Rivers, and the Rio Grande, and south along the Gulf Coast to Belize and Guatemala. . These large catfish have also been introduced in a number of reservoirs and rivers, notably the Santee Cooper lakes of Lake Marion and Lake Moultrie in South Carolina, the James River in Virginia, Powerton Lake in Pekin, Illinois, and Springfield Lake in Springfield, Illinois. This fish is also found in some lakes in Florida. The fish is considered an invasive pest in some areas, particularly the Chesapeake Bay. Blue catfish can tolerate brackish water, thus can colonize along inland waterways of coastal regions.
        Blue catfish are often misidentified as channel catfish. Blue catfish are heavy bodied, blue–ish gray in color, and have a dorsal hump. The best way to tell the difference between a channel catfish and a blue catfish is to count the number of rays on the anal fin. A blue catfish will have 30–36 rays whereas a channel catfish will have 25–29. Blue catfish also have barbels, a deeply forked tail, and a protruding upper jaw. Blue catfish are opportunistic predators and eat any species of fish they can catch, along with crawfish, freshwater mussels, frogs, and other readily available aquatic food sources. Catching their prey becomes all the more easy if it is already wounded or dead, and blue catfish are noted for feeding beneath marauding schools of striped bass in open water in reservoirs or feeding on wounded baitfish that have been washed through dam spillways or power–generation turbines.\"</string>
    <string name="bream">Bream</string>
    <string name="catfish">Catfish</string>
    <string name="bass">Bass</string>
    <string name="crappie">Crappie</string>
    <string name="other">Other</string>
</resources>