<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carsquared.arkansasgameandfish.MainActivity"
    android:background="@drawable/fishpole"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="Akansas Game\nand Fish"
        android:textAlignment="viewStart"
        android:textColor="@color/darkgreen"
        android:textSize="33sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/dialog"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78">

        <Button
            android:id="@+id/breambut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bream"
            android:textSize="24sp" />

        <Button
            android:id="@+id/catbut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catfish"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bassbut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bass"
            android:textSize="24sp" />

        <Button
            android:id="@+id/crappiebut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crappie"
            android:textSize="24sp" />

        <Button
            android:id="@+id/otherbut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="24sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
